# python-cli-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  template.py
.github/workflows/: ci.yml
tests/: test_template.py
