[project]
name = "template"
version = "0.1.0"
description = "A starting point for a new Python CLI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
template = "template:main"

[dependency-groups]
dev = [
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=template --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["template"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
